# euler-adjoint

./: .gitignore  CMakeLists.txt  README.md
adadj/: Makefile  adBuffer.h  adStack.h  adadj.cpp  bc.cpp  bc_routines.c  clean.sh  cost.c  flux.cpp  jroeflux_bx.c  kroeflux_bx.c  restart.cpp  roeflux.c  script.sh  step.cpp  timestep.c  timestep_bx.c  wall_bc_bx.c  write.cpp
adjoint/: Makefile  abc.cpp  acost.cpp  adBuffer.c  adStack.c  adiss.cpp  adjoint.cpp  aflux.cpp  ainit.cpp  arestart.cpp  astep.cpp  autils.cpp  awrite.cpp  check.cpp  dadi.c  smooth.cpp  timestep.cpp  tmpflux.c  tmpflux_b.c  tmpflux_b.msg  tmpfluxb.h
euler/: bc.cpp  dadi.cpp  euler.cpp  flux.cpp  forces.cpp  init.cpp  read.cpp  restart.cpp  step.cpp  timestep.c  timestep.cpp  utils.cpp  write.cpp
grid/: grid.cpp  metrics.cpp  python_helpers.cpp  write.cpp
grid/old/: python_wrap.cpp
include/: adadj.hpp  adj_routines.h  adjoint.hpp  euler.hpp  euler_routines.h  grid.hpp  meshgen.hpp  python_helpers.hpp  slow_euler.hpp  slow_euler_routines.h  structures.h
meshgen/: init.cpp  meshgen.cpp  poisson.cpp  slor.c  slor.h  ss.c  ss.h  write.cpp
meshgen/old/: adi.c  grid.c  main.c  slor.c  tri.c  utils.c  write_grid.c
python/: cg_design.py  design.py  euler_utils.py  grid_utils.py  hickshenne.py  naca.py  test.py
python_wrap/: python_helpers.cpp  python_wrap.cpp
sample_run_directories/adjoint_cg_1var/: input.yaml  run.py
sample_run_directories/adjoint_cg_6var/: input.yaml  run.py
sample_run_directories/adjoint_only/: adadj.py  adj.py  brute.py  make_desired.py
sample_run_directories/adjoint_slsqp_1var/: make_desired.py  run.py
sample_run_directories/adjoint_slsqp_6var/: make_desired.py  run.py
sample_run_directories/euler_only/: input.yaml  run.py
slow_euler/: bc.cpp  dadi.cpp  flux.cpp  forces.cpp  init.cpp  read.cpp  restart.cpp  slow_euler.cpp  step.cpp  timestep.c  utils.cpp  write.cpp
yaml/: CMakeLists.txt
